# crucible

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  USAGE.md  pyproject.toml  requirements-release.txt
.github/workflows/: ci.yml  release.yml
docs/: ENTERPRISE-READINESS.md  RELEASE-READINESS.md
docs/brand/: README.md
examples/: batch-binary-search.json  crucible-demo.html  demo.py  measurements-binary-search.json  refine-discovery-loop.json  substrate-binary-search.json  thesis-binary-search.json
src/crucible/: __init__.py  __main__.py  assess.py  assess_cmd.py  batch_cmd.py  browser_evidence.py  claim.py  cli.py  commands.py  drift.py  drift_cmd.py  ecosystem_measure.py  explain.py  flagship.py  gate.py  mcp.py  mcp_tools.py  measure.py  measurement_gate.py  measurement_gate_cmd.py  recheck_cmd.py  refine.py  refine_cmd.py  registry.py  registry_cmd.py  registry_ops.py  report.py  report_cmd.py  review_cmd.py  review_contract.py  run_cmd.py  steelman.py  subprocess_edges.py  telos_measure.py  thesis.py  verdict.py  wellposed.py
tests/: test_assess.py  test_browser_evidence.py  test_claim.py  test_cli.py  test_cli_batch.py  test_cli_drift.py  test_cli_explain.py  test_cli_export.py  test_cli_measure.py  test_cli_measurement_gate.py  test_cli_recheck.py  test_cli_refine.py  test_cli_registry_ops.py  test_cli_report.py  test_cli_run.py  test_cli_validation.py  test_drift.py  test_ecosystem_measure.py  test_explain.py  test_flagship_cli.py  test_gate.py  test_mcp.py  test_measure.py  test_measurement_gate.py  test_readiness.py  test_refine.py  test_registry.py  test_registry_ops.py  test_report.py  test_steelman.py  test_subprocess_edges.py  test_telos_measure.py  test_thesis.py  test_verdict.py  test_wellposed.py
