[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-bench"
version = "0.8.0"
description = "An accountable judgment organ: register a thesis and emit a re-checkable verdict per claim (MATCH / DRIFT / UNVERIFIABLE), grounded in a measurement rather than asserted"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Fair-Source"
license-files = ["LICENSE"]
authors = [{ name = "Zain Dana Harper" }]
keywords = [
    "reasoning", "judgment", "verification", "accountability", "theses", "steelman",
    "refine", "verdict", "epistemics", "falsification", "research", "evidence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
crucible = "crucible.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/crucible"
Repository = "https://github.com/HarperZ9/crucible"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["src/crucible"]
