[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-bench"
version = "1.1.0"
description = "Measurement-backed thesis evaluation with clean verifier packets and re-checkable verdicts."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Fair-Source"
license-files = ["LICENSE"]
authors = [{ name = "Zain Dana Harper" }]
keywords = [
    "reasoning", "judgment", "verification", "accountability", "theses", "steelman",
    "refine", "verdict", "epistemics", "falsification", "research", "evidence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10", "build>=1", "twine>=6"]

[project.scripts]
crucible = "crucible.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/crucible"
Repository = "https://github.com/HarperZ9/crucible"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["src/crucible"]
